# dashqt

./: .gitignore  README.md  pyproject.toml
.github/: BRANCH_PROTECTION_CHECKLIST.md
.github/workflows/: ci-fast.yml  ci.yml
examples/: example_dashqt_app.py
src/dashqt/: __init__.py  embedded_dash_application.py
src/dashqt/ui/: __init__.py  embedded_dash_application.py  example_embedded_dash_application.py
tests/: test_embedded_dash_application_lifecycle.py
