[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashqt"
version = "0.1.0"
description = "Embed a Plotly Dash app in a Qt window with managed lifecycle and shutdown behavior"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14",
    "flask>=2.3",
    "plotly>=5.18",
    "PySide6>=6.6",
    "requests>=2.31",
    "werkzeug>=2.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-requests>=2.31.0.10",
]

[project.urls]
Homepage = "https://github.com/gchrisjenkins/dashqt"
Repository = "https://github.com/gchrisjenkins/dashqt"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dashqt*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/dashqt"]
ignore_missing_imports = true
show_error_codes = true
